<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>gui.ava</groupId>
	<artifactId>html2image</artifactId>
	<packaging>jar</packaging>
	<version>3.0.0-SNAPSHOT</version>
	<name>html2image</name>
	<url>https://maven.apache.org</url>

	<!-- Java 17 LTS -->
	<properties>
		<java.version>17</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.source>${java.version}</maven.compiler.source>

		<flying-saucer.version>9.9.1</flying-saucer.version>
	</properties>

	<!-- Dependencies -->
	<dependencies>

		<!-- ==== PARSING ====================================== -->

		<dependency>
			<groupId>org.htmlunit</groupId>
			<artifactId>neko-htmlunit</artifactId>
			<version>4.4.0</version>
		</dependency>

		<!-- ==== RENDERING ================================================== -->

		<dependency>
			<groupId>org.xhtmlrenderer</groupId>
			<artifactId>flying-saucer-core</artifactId>
			<version>${flying-saucer.version}</version>
		</dependency>
		<dependency>
			<groupId>org.xhtmlrenderer</groupId>
			<artifactId>flying-saucer-pdf</artifactId>
			<version>${flying-saucer.version}</version>
		</dependency>

		<!-- ==== UTILS ====================================================== -->

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.16.0</version>
		</dependency>

		<!-- ==== TEST ======================================================== -->

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.11.0</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<!-- DISTRIBUTION -->
	<distributionManagement>
		<repository>
			<id>jfrog-third-party-releases-local</id>
			<!--<url>http://yoava.artifactoryonline.com/yoava/libs-releases-local</url>-->
			<!--<url>http://yoava.artifactoryonline.com/yoava/libs-snapshots-local</url>-->
			<url>https://repo.jfrog.org/artifactory/third-party-releases-local</url>
		</repository>
	</distributionManagement>

	<!-- BUILD -->
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
